# Leapfrog_FSW

./: .project
Leapfrog_FlightController/: .gitignore  10-leapfrog.rules  CMakeLists.txt  HEARTBEAT_UPDATE_GUIDE.md  README.md  build_workspace.sh  flush_serial.py  heartbeat.pb.cc  heartbeat.pb.h  heartbeat.proto  manifest.txt  package.xml  requirements.txt  run_leapos.sh
Leapfrog_FlightController/scripts/raw/: IMUdata.script  PTdata.script  automated_square_wave.script  engineStep.script  engineStepShort.script  gimbal_seq.script  simACS.script  simThrust.script  thruster_pulse.script  thruster_pulse_2.script  thruster_pulse_full_tank.script
Leapfrog_FlightController/src/communication/: CMakeLists.txt  package.xml
Leapfrog_FlightController/src/communication/include/: Communication.hpp  Serial.hpp
Leapfrog_FlightController/src/communication/src/: Communication.cpp  Serial.cpp
Leapfrog_FlightController/src/flightcontrol/: CMakeLists.txt  heartbeat.pb.h  heartbeat.proto  package.xml
Leapfrog_FlightController/src/flightcontrol/include/: CommandParser.hpp  flightmanager.hpp
Leapfrog_FlightController/src/flightcontrol/launch/: vehicle.launch.py
Leapfrog_FlightController/src/flightcontrol/msg/: Heartbeat.msg
Leapfrog_FlightController/src/flightcontrol/src/: CommandParser.cpp  flightmanager.cpp
Leapfrog_FlightController/src/stm32_bridge/: CMakeLists.txt  package.xml
Leapfrog_FlightController/src/stm32_bridge/include/: stm32_bridge.hpp
Leapfrog_FlightController/src/stm32_bridge/src/: stm32_bridge.cpp
Leapfrog_GroundStation/: .gitignore  CMakeLists.txt  Manifest.txt  PROTOCOL_DOCUMENTATION.md  build_workspace.sh  groundstation_gui.py  heartbeat.proto  install_ubuntu.sh  install_windows.sh  package.xml
Leapfrog_GroundStation/src/: Echo.cpp  Echo_Test.cpp
Leapfrog_GroundStation/src/ground_station/include/: GroundStation.hpp  GroundStation_Terminal.hpp
Leapfrog_GroundStation/src/ground_station/include/communications/: Serial.hpp
Leapfrog_GroundStation/src/ground_station/src/: GroundStation.cpp  GroundStation_Terminal.cpp
Leapfrog_GroundStation/src/ground_station/src/communications/: Serial.cpp
Leapfrog_Vehicle/: .cproject  .gitignore  .project  GPS_SAM_M8Q_CONNECTION.md  Leapfrog_V1.ioc  Leapfrog_Vehicle Debug.launch  Leapfrog_Vehicle.ioc  Leapfrog_Vehicle.launch  README.md  TVC_SYSTEM_DOCUMENTATION.md  manifest.txt
Leapfrog_Vehicle/.metadata/: .log4j2.xml  version.ini
Leapfrog_Vehicle/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Leapfrog_Vehicle/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Leapfrog_Vehicle/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Leapfrog_Vehicle/Core/Inc/: ACS_PID.h  ProcessGimbalIMU.h  ProcessIMU.h  TVC_ACS_Coupling.h  Test_Operations.h  alt_imu_coupling.h  altimeter.h  engine.h  engine_PID.h  gps.h  heartbeat.h  main.h  printf.h  stm32f4xx_it.h  tim.h  tvc.h  tvc2.h
Leapfrog_Vehicle/Core/Src/: ACS_PID.c  ProcessGimbalIMU.c  ProcessIMU.c  TVC_ACS_Coupling.c  alt_imu_coupling.c  altimeter.c  engine.c  engine_PID.c  gps.c  heartbeat.c  main.c  printf.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tvc.c  tvc2.c
Leapfrog_Vehicle/Core/Startup/: startup_stm32f446retx.s
Leapfrog_Vehicle/document/docs/: Doxyfile
Leapfrog_Vehicle/document/docs/html/: _a_c_s___p_i_d_8h_source.html  _c_m_s_i_s__m_i_s_r_a__exceptions.html  _free_r_t_o_s_8h_source.html  _free_r_t_o_s_config_8h_source.html  _p_i_d_8h_source.html  _process_i_m_u_8h_source.html  _stack_macros_8h_source.html  _test___operations_8h_source.html  annotated.html  atomic_8h.html  atomic_8h_source.html  cachel1__armv7_8h_source.html  classes.html  cmsis__armcc_8h.html  cmsis__armcc_8h_source.html  cmsis__armclang_8h.html  cmsis__armclang_8h_source.html  cmsis__armclang__ltm_8h.html  cmsis__armclang__ltm_8h_source.html  cmsis__compiler_8h.html  cmsis__compiler_8h_source.html  cmsis__gcc_8h.html  cmsis__gcc_8h_source.html  cmsis__iccarm_8h.html  cmsis__iccarm_8h_source.html  cmsis__os2_8h_source.html  cmsis__os_8h_source.html  cmsis__version_8h.html  cmsis__version_8h_source.html  core__armv81mml_8h.html  core__armv81mml_8h_source.html  core__armv8mbl_8h.html  core__armv8mbl_8h_source.html  core__armv8mml_8h.html  core__armv8mml_8h_source.html  core__cm0_8h.html  core__cm0_8h_source.html  core__cm0plus_8h.html  core__cm0plus_8h_source.html  core__cm1_8h.html  (+1206 more)
Leapfrog_Vehicle/document/docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1e.js  all_1f.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_10.js  classes_11.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_2.js  enumvalues_6.js  files_2.js  functions_1.js  (+41 more)
Leapfrog_Vehicle/document/docs/latex/: _a_c_s___p_i_d_8h_source.tex  _free_r_t_o_s_8h_source.tex  _free_r_t_o_s_config_8h_source.tex  _p_i_d_8h_source.tex  _stack_macros_8h_source.tex  _test___operations_8h_source.tex  annotated.tex  atomic_8h.tex  atomic_8h_source.tex  cachel1__armv7_8h_source.tex  cmsis__armcc_8h.tex  cmsis__armcc_8h_source.tex  cmsis__armclang_8h.tex  cmsis__armclang_8h_source.tex  cmsis__armclang__ltm_8h.tex  cmsis__armclang__ltm_8h_source.tex  cmsis__compiler_8h.tex  cmsis__compiler_8h_source.tex  cmsis__gcc_8h.tex  cmsis__gcc_8h_source.tex  cmsis__iccarm_8h.tex  cmsis__iccarm_8h_source.tex  cmsis__os2_8h_source.tex  cmsis__os_8h_source.tex  cmsis__version_8h.tex  cmsis__version_8h_source.tex  core__armv81mml_8h.tex  core__armv81mml_8h_source.tex  core__armv8mbl_8h.tex  core__armv8mbl_8h_source.tex  core__armv8mml_8h.tex  core__armv8mml_8h_source.tex  core__cm0_8h.tex  core__cm0_8h_source.tex  core__cm0plus_8h.tex  core__cm0plus_8h_source.tex  core__cm1_8h.tex  core__cm1_8h_source.tex  core__cm23_8h.tex  core__cm23_8h_source.tex  (+440 more)
