<?xml version="1.0"?>
<package format="3">
  <name>communication</name>
  <version>0.1.0</version>
  <description>Serial communication library used for RFD modem and STM32 bridge</description>
  <maintainer email="williamp.christian@gmail.com">BillyChrist</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
